<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="80dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/book_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        tools:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout style="@style/ItemLinearLayout">

            <TextView
                android:id="@+id/title_text"
                style="@style/ItemText"
                android:layout_weight="3"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/titel_item" />

            <TextView
                android:id="@+id/author_text"
                style="@style/ItemText"
                android:layout_weight="2"
                android:gravity="end"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/autor_item" />


        </LinearLayout>

        <LinearLayout style="@style/ItemLinearLayout">

            <TextView
                android:id="@+id/subtitle_text"
                style="@style/ItemText"
                android:layout_weight="3"
                tools:text="@string/subtitle_item" />

            <TextView
                android:id="@+id/published_text"
                style="@style/ItemText"
                android:layout_weight="2"
                android:gravity="end"
                tools:text="@string/published_item" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>