<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bacxkground_seven"
    android:padding="@dimen/activity_main_margin"
    tools:context="com.example.standard.bookapp.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/initial_text"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:onClick="submitClick"
        android:text="@string/submit_button"
        android:textColor="@color/textColor" />

    <EditText
        android:id="@+id/topic_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="@color/backgroundColor"
        android:gravity="center"
        android:hint="@string/topic_edit_text"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="20sp" />

</RelativeLayout>
